test/negative/feature_packageprivatemethods.java

package dovs.joos.features;

public class feature_packageprivatemethods {
  /* package private */ int m() {
    return 42;
  }
  public feature_packageprivatemethods() {}
}

